--- a/prog_systeme_form/prog_systeme_form.csproj
+++ b/prog_systeme_form/prog_systeme_form.csproj
@@ -51,6 +51,9 @@
     </Compile>
     <Compile Include="fichiers sources\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="fichiers d%27en tête\Acceuil.resx">
+      <DependentUpon>Acceuil.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
