--- a/EasySaveV1.0/EasySaveV1.0.deps.json
+++ b/EasySaveV1.0/EasySaveV1.0.deps.json
@@ -6,12 +6,12 @@
   "compilationOptions": {},
   "targets": {
     ".NETCoreApp,Version=v3.1": {
-      "appli_console/1.0.0": {
+      "EasySaveV1.0/1.0.0": {
         "dependencies": {
           "Newtonsoft.Json": "13.0.1"
         },
         "runtime": {
-          "appli_console.dll": {}
+          "EasySaveV1.0.dll": {}
         }
       },
       "Newtonsoft.Json/13.0.1": {
@@ -25,7 +25,7 @@
     }
   },
   "libraries": {
-    "appli_console/1.0.0": {
+    "EasySaveV1.0/1.0.0": {
       "type": "project",
       "serviceable": false,
       "sha512": ""
